Cambios para AWS

--- a/.env
+++ b/.env
@@ -13,5 +13,5 @@ USE_POSTGRES=True
 POSTGRES_DB=serviwatchdb
 POSTGRES_USER=serviwatchdb_user
 POSTGRES_PASSWORD=MqtSygSCU0DyNBBQ9algxHb8CWK7X8Le
-POSTGRES_HOST=dpg-cvvis5buibrs73bg747g-a.virginia-postgres.render.com
+POSTGRES_HOST=dpg-cvvis5buibrs73bg747g-a
 POSTGRES_PORT=5432
