Cambios para AWS

--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@
 # Clave secreta de Django (¡mantenla en secreto!)
 SECRET_KEY= 'django-insecure-zt2k&3)kgybvqxclhc#q)q-!wfm@%uw&w+w529krgmc=*b6*=&'
 
-DATABASE_URL=postgresql://serviwatchdb_user:MqtSygSCU0DyNBBQ9algxHb8CWK7X8Le@dpg-cvvis5buibrs73bg747g-a/serviwatchdb
+DATABASE_URL=postgresql://serviwatchdb_user:MqtSygSCU0DyNBBQ9algxHb8CWK7X8Le@dpg-cvvis5buibrs73bg747g-a.virginia-postgres.render.com/serviwatchdb
 DEBUG=False
