--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,11 +17,11 @@ jobs:
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
-          cd /ruta/de/tu/app
-          git pull origin main
-          source venv/bin/activate
+          cd /home/ubuntu/Serviwatch
+          git pull origin DCordoba
+          source /home/ubuntu/Serviwatch/venv/bin/activate
           pip install -r requirements.txt
           python manage.py migrate
           python manage.py collectstatic --noinput
-          sudo systemctl restart gunicorn
+          sudo systemctl restart nginx
 
