--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main  # o la rama que usas para producción
+      - DCordoba  # o la rama que usas para producción
 
 jobs:
   deploy:
@@ -24,4 +24,3 @@ jobs:
           python manage.py migrate
           python manage.py collectstatic --noinput
           sudo systemctl restart nginx
-
