--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -3,21 +3,17 @@
     on:
       push:
         branches:
-          - main
           - development
-          - DCordoba
       pull_request:
         branches:
-          - main
           - development
-          - DCordoba
     jobs:
       build:
         runs-on: ubuntu-latest
         strategy:
           matrix:
             python-version:
-              - 3.12
+              - 3.13
         steps:
           - uses: actions/checkout@v3
           - name: Set up Python ${{ matrix.python-version }}
@@ -35,18 +31,34 @@
             run: |
               python manage.py makemigrations
               python manage.py migrate
-          - name: Run Tests
+          - name: Run Tests and Generate Coverage
             run: |
-              python manage.py test
-          - name: Lint with flake8
-            run: >
-              pip install flake8
+              coverage run manage.py test
+              coverage xml
+          #- name: Run Tests
+          #  run: |
+          #    python manage.py test
+          #- name: Lint with flake8
+          #  run: >
+          #    pip install flake8
     
               # stop the build if there are Python syntax errors or undefined names
     
-              flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+           #   flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
     
               # exit-zero treats all errors as warnings
     
-              flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+           #   flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          - name: SonarQube Scan
+            uses: SonarSource/sonarcloud-github-action@master
+            env:
+              SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            with:
+              args: >
+                -Dsonar.projectKey=Serviwatch
+                -Dsonar.python.coverage.reportPaths=coverage.xml
+                -Dsonar.sources=.
+                -Dsonar.exclusions=**/migrations/**,venv/**,**/tests/**
+                -Dsonar.host.url=https://sonarcloud.io
+                -Dsonar.organization=Desprogramadores
     
