--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -50,6 +50,7 @@
     
            #   flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
           - name: SonarQube Scan
+            if: github.event.pull_request.base.ref == 'development' || github.event_name == 'push'
             uses: SonarSource/sonarcloud-github-action@master
             env:
               SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -61,4 +62,6 @@
                 -Dsonar.exclusions=**/migrations/**,venv/**,**/tests/**
                 -Dsonar.host.url=https://sonarcloud.io
                 -Dsonar.organization=Desprogramadores
+                -Dsonar.branch.name=development             
+
     
