--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,26 @@
 asgiref==3.8.1
 Brotli==1.1.0
+cffi==1.17.1
+chardet==5.2.0
 coverage==7.8.0
+cssselect2==0.8.0
 dj-database-url==2.3.0
 Django==5.2
+fonttools==4.57.0
 gunicorn==23.0.0
 packaging==24.2
+pillow==11.2.1
 psycopg2-binary==2.9.10
+pycparser==2.22
+pydyf==0.11.0
+pyphen==0.17.2
 python-dotenv==1.1.0
+reportlab==4.4.0
 sqlparse==0.5.3
+tinycss2==1.4.0
+tinyhtml5==2.0.0
 typing_extensions==4.13.2
 tzdata==2025.2
+webencodings==0.5.1
 whitenoise==6.9.0
+zopfli==0.2.3.post1
